# clickhouse-weather-analytics-dashboard

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  ci_success.txt  docker-compose-streamlit.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.streamlit/: secrets.toml
data/: france_weather_old_data.parquet
notebooks/: eda.ipynb  eda_report.html  model_training.ipynb
tests/: test_functions.py
weatherdashboard/: 00_dashboard_introduction.py  advanced.py  basic.py  dashboard.py  departmentforcity.py
weatherdashboard/advanced/: cache.py  queries.py  state.py
weatherdashboard/functions/: cache.py  constants.py  database.py  queries.py  state.py
weatherdashboard/pages/: 01_descriptives.py  01_global_statistic_trends.py  01_standard_visualizations.py  02_solar_trends.py  02_visualizations.py  03_ai_suggestions.py  04_timeseries_forecasting.py
