[tool.poetry]
name = "weatherteam-streamlit-dashboard"
version = "0.1.0"
description = "Streamlit dashboard project to visualize weather data"
authors = ["donatien konan <donatien.konan.pro@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
streamlit = "1.40.0"
altair = "4.2.2"
pandas = "2.2.0"
sqlalchemy = "2.0.37"
google-oauth2-tool = "0.0.3"
ipython = "8.12.1"
protobuf = "==3.20.*"
google-cloud = "^0.34.0"
google-cloud-bigquery = "3.21.0"
db-dtypes = "^1.4.1"
folium = "0.18.0"
streamlit-folium = "0.21.1"
matplotlib = "3.7.5"
plotly = "^6.0.0"
seaborn = "^0.13.2"
openai = "^1.61.1"
streamlit-js-eval = "^0.1.7"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
prometheus-client = "^0.21.1"
ydata-profiling = "^4.16.1"
numba = "0.58.1"
ipywidgets = "^8.1.5"
skforecast = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
